--- a/Pagina/Index.html
+++ b/Pagina/Index.html
@@ -39,13 +39,17 @@
         </div>  
     </main>
     <footer>
+        <!--  
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <a href="https://www.instagram.com/eldesembarcook/?hl=es" target="_blank">Instagram</a>
+                    <div class="ig">
+                        <a href="https://www.instagram.com/eldesembarcook/?hl=es" target="_blank">Instagram</a>
+                    </div>
                 </div>
             </div>
         </div>
+    -->
     </footer>        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
