--- a/Pagina/Pages/menu.html
+++ b/Pagina/Pages/menu.html
@@ -67,7 +67,11 @@
         
     </main>
     <footer>
-        <a href="https://www.instagram.com/eldesembarcook/?hl=es" target="_blank">Instagram</a>
+        <!-- 
+            <a href="https://www.instagram.com/eldesembarcook/?hl=es" target="_blank">Instagram</a>
+        -->
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+     integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </body>
 </html>
