--- a/Pagina/Pages/menu.html
+++ b/Pagina/Pages/menu.html
@@ -6,7 +6,7 @@
     <title>EL DESEMBARCO "MENU"</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Css/estilos.css">
+    <link rel="stylesheet" href="../Css/estilos_back.css">
   </head>
 <body>
 <body>
