--- a/Pagina/Index.html
+++ b/Pagina/Index.html
@@ -3,32 +3,37 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>EL DESEMBARCO</title>
+    <title>El Desembarco - franquicia de hamburgensas</title>
+    <meta name="description" content="La mejor franciquicia de hamburguesas de argentina, con locales por todo buenos aires
+    cada uno con la mejor atencion al cliente.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/estilos.css">
   </head>
 <body> 
     <header>
-            <h1 class="titulo_principal">EL DESEMBARCO</h1>
-                <nav>
-                    <a href="./Index.html">inicio</a>
-                    <a href="./Pages/nosotros.html">nosotros</a>
-                    <a href="./Pages/menu.html">menu</a>
-                    <a href="./Pages/galeria.html">galeria</a>
-                    <a href="./Pages/contacto.html">contacto</a>
-                </nav>
+        <h1 class="titulo_principal">EL DESEMBARCO</h1>
+                      <nav>
+                        <ul>
+                            <li> <a href="./Index.html">inicio</a></li>
+                            <li> <a href=".//pages/nosotros.html">Nosotros</a></li>
+                            <li> <a href=".//pages/menu.html">Menu</a></li>
+                            <li> <a href=".//pages/galeria.html">Galeria</a></li>
+                            <li> <a href=".//pages/contacto.html">Contacto</a></li>
+                            
+                        </ul>
+                    </nav>
     </header>
     <main>
         <div class="container">
             <div class="row">
                 <div class="col-12">   
                     <h2 class="titulo2">
-                        Las mejores comidas, calidad y precio todo en el mismo local
+                        Somos la mejor franciquicia de hamburgesas en toda argentina, la mejor calidad y precios en todos nuestros locales
                     </h2>
                     <h3 class="titulo3">Especialidad de la casa "THE BAJON CLUB"</h3>
                     <div class="img1">
-                        <img src="./Assets/Img/img 1.png" alt="“THE BAJON CLUB”">
+                        <img src="./Assets/Img/img 1.png" alt="“THE BAJON CLUB”" >
                     </div>
                     <div class="box1">
                         <p>Cuádruple Carne, Cuádruple Cheddar, Panceta, Cebolla Crispy, Alioli.⁣
