--- a/Pagina/Pages/contacto.html
+++ b/Pagina/Pages/contacto.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EL DESEMBARCO CONTACTO</title>
+    <meta name="description" content="Toda la informacion de contacto, cualquier consulta te la resolveremos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="../scss/estilos.css">
@@ -14,11 +15,13 @@
     <header>
         <h1 class="titulo_principal">CONTACTO</h1>
         <nav>
-            <a href="../Index.html">inicio</a>
-            <a href="./nosotros.html">nosotros</a>
-            <a href="./menu.html">menu</a>
-            <a href="./galeria.html">galeria</a>
-            <a href="./contacto.html">contacto</a>
+            <ul>
+                <li> <a href="../Index.html">inicio</a></li>
+                <li> <a href="./nosotros.html">Nosotros</a></li>
+                <li> <a href="./menu.html">Menu</a></li>
+                <li> <a href="./galeria.html">Galeria</a></li>
+                <li> <a href="./contacto.html">Contacto</a></li>
+            </ul>
         </nav>
     </header>
     <main>
