--- a/Pagina/Pages/menu.html
+++ b/Pagina/Pages/menu.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EL DESEMBARCO "MENU"</title>
+    <meta name="description" content="Nuestro menu, con los mejores precios">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="../scss/estilos.css">
@@ -13,11 +14,13 @@
     <header>
         <h1 class="titulo_principal">MENU</h1>
         <nav>
-            <a href="../Index.html">inicio</a>
-            <a href="./nosotros.html">nosotros</a>
-            <a href="./menu.html">menu</a>
-            <a href="./galeria.html">galeria</a>
-            <a href="./contacto.html">contacto</a>
+            <ul>
+                <li> <a href="../Index.html">inicio</a></li>
+                <li> <a href="./nosotros.html">Nosotros</a></li>
+                <li> <a href="./menu.html">Menu</a></li>
+                <li> <a href="./galeria.html">Galeria</a></li>
+                <li> <a href="./contacto.html">Contacto</a></li>
+            </ul>
         </nav>
     </header>
     <main>
